crates/hir-ty/tests/snapshots/jls_strict_unchecked__strict_unchecked_parameterized_wins_fixed.snap
---
source: crates/hir-ty/tests/jls_strict_unchecked.rs
expression: out
---
FILE /src/com/example/RawOverload.java:
package com.example;

import java.util.List;

class RawOverload {
    static List<String> m(List<String> l) {
        return null;
    }

    static Object m(Object o) {
        return null;
    }

    static void use(List raw) {
        Object o = m(raw);
    }
}

method m(java.util.List<java.lang.String>): java.util.List<java.lang.String>
  locals: l0: java.util.List<java.lang.String>
  exprs: e0: null
method m(java.lang.Object): java.lang.Object
  locals: l1: java.lang.Object
  exprs: e1: null
method use(java.util.List): void
  locals: l2: java.util.List | l3: java.lang.Object
  exprs: e2: java.util.List | e3: java.util.List<java.lang.String>
  diags: e3@14:19: unchecked-invocation: Unchecked method invocation: 'List' to 'List<String>'
